--- a/_config.yml
+++ b/_config.yml
@@ -7,30 +7,30 @@ paginate: 5
 plugins: [jekyll-paginate]
 port: 4000
 safe: true
-url: http://jekyller.github.io/vitae
-author: Fábio Madeira
+url: http://shreyakhurana.github.io/vitae
+author: Shreya Khurana
 
 # edit this section with your information
 # jekyller.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
 baseurl: /vitae/
-title: Chris Turner's Resume
-name: Chris Turner
-email: christurner@me.com
-email_full: mailto:youremail@me.com
-website: github.io/sustain
-website_full: https://jekyller.github.io/sustain
-github: trending
+title: Shreya Khurana's Resume
+name: Shreya Khurana
+email: shreyak4@illinois.edu
+email_full: mailto:shreyak4@illinois.edu
+website: shreyakhurana.github.io
+website_full: https://shreyakhurana.github.io
+github: ShreyaKhurana
 twitter: twitter
-tel: +44 0000 000000
-tel_full: tel:+440000000000
-google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
+tel:
+tel_full:
+google_maps:
 address:
-  street: 44 Perth Street
-  postcode: EH3 5BL
-  city: Edinburgh
-  country: United Kingdom
-google_analytics: UA-69300817-1
+  street:
+  postcode:
+  city:
+  country:
+google_analytics:
 
 # needed for travis-ci build
 exclude: [vendor]
