--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@ paginate: 5
 plugins: [jekyll-paginate]
 port: 4000
 safe: true
-url: http://shreyakhurana.github.io/vitae
+url: https://shreyakhurana.github.io/vitae
 author: Shreya Khurana
 
 # edit this section with your information
 # jekyller.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
-baseurl: /vitae/
+baseurl: /
 title: Shreya Khurana's Resume
 name: Shreya Khurana
 email: shreyak4@illinois.edu
