--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author: Shreya Khurana
 # edit this section with your information
 # jekyller.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
-baseurl: /
+baseurl: /vitae/
 title: Shreya Khurana's Resume
 name: Shreya Khurana
 email: shreyak4@illinois.edu
